--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Academy kitties </title>
+  <title>Neon Cats </title>
   <script type="text/javascript" src="assets/js/jquery-3.4.1.js"></script>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <script src="assets/bootstrap/js/popper.js"></script>
@@ -18,8 +18,8 @@
   <body>
     <div class="container p-5" style="margin-top: 12vh; margin-bottom: 10vh;">
         <div align="center">
-        <h1 class="c-white">Kitties-Factory</h1>
-        <p class="c-white">Create your custom Kitty</p>
+        <h1 class="c-white">Neon-Cats-Factory</h1>
+        <p class="c-white">Create your custom Cat</p>
     </div>
         <div class="row">
             <div class="col-lg-4 catBox m-2 light-b-shadow">
@@ -87,11 +87,9 @@
                         </div>
                     </div>
                                 
-
                     <div class="cat__body">
                         <div class="cat__chest"></div>
                         <div class="cat__chest_inner"></div>
-
 
                         <div id="cat__pawL" class="cat__paw-left">
                             <div class="cat__paw-shadowL">
@@ -207,7 +205,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="formControlRange"><b>Animation</b><span class="badge badge-dark ml-2" id="animationName"></span></label>
-                                    <input type="range" min="1" max="6" class="form-control-range" id="animation">
+                                    <input type="range" min="1" max="7" class="form-control-range" id="animation">
                                 </div>
                             </div>
 
