build out showcats.js and buildcats.js

--- a/client/index.html
+++ b/client/index.html
@@ -93,24 +93,22 @@
             <a class="carousel-control-next" href="#demo" data-slide="next">
               <span class="carousel-control-next-icon"></span>
             </a>
-          
-        </div>
+          </div>
 
 
-    <div class="container p-5" style="margin-top: 5vh; margin-bottom: 10vh;">
+    <div class="container p-3" style="margin-top: 5vh; margin-bottom: 10vh;">
         <div align="center">
-            <h1><b>Welcome to NeonCats</b></h1>
-        <!--<h1 class="c-white" style="background: -webkit-linear-gradient(rgb(6, 212, 248), rgb(252, 5, 239));
+        <h1 class="c-white" style="background: -webkit-linear-gradient(rgb(6, 91, 248), rgba(252, 5, 240, 0.493));
         -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-size:60px"><b>Welcome to NeonCats</b></h1>
-        -->
+        
         <h3><p class="c-blue" style="font-size: 21px">A place for creating luminous, clawish and unique NeonCats</p></h3>
         <br>
 
           <div class="container">
             <div class="col-md-12" align=center style="background-color: #dedef8; box-shadow: 
             inset 1px -1px 1px #444, inset -1px 1px 1px #444; border-radius: 10px; padding: 5px">
-            <p> <h2>UNIQUENESS</h2>NeonCats have unique features and each specimen exists only once in this world. Its DNA is registered on the Blockchain which guarantees single ownership of this collectible. 
-                NeonCats are collector items that use a technology called NFTs <a href="https://en.wikipedia.org/wiki/Non-fungible_token" target="_blank">(non-fungible tokens)</a> to register single ownership on the Blockchain. 
+            <p> <h2>UNIQUENESS</h2>NeonCats have unique features and each specimen exists only once in this world. 
+                NeonCats are collector items that use a technology called NFTs <a href="https://en.wikipedia.org/wiki/Non-fungible_token" target="_blank">(non-fungible tokens)</a> to register and guarantee single ownership on the Blockchain. 
             </p>
         </div>
 
@@ -144,7 +142,7 @@
         </div>
     </div>
 
-    <footer class="fixed-bottom" align="left">
+    <footer class="fixed-bottom" align="right">
         <p>©copyright Sneicode 2020</p>
     </footer>
 
