--- a/client/info.html
+++ b/client/info.html
@@ -71,7 +71,7 @@
             <li>Once you've successfully created and acquired your first NeonCat, navigate to the <a style="color:deepskyblue" href="catalogue.html" target="_blank">Catalogue</a> page to see all the NeonCats you own</li>
             
         </ol>
-    <footer class="fixed-bottom" align="left">
+    <footer class="fixed-bottom" align="right">
         <p>© copyright Sneicode 2020</p>
     </footer>
 
