--- a/client/catalogue.html
+++ b/client/catalogue.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/css/mystyle.css">
   <link rel="stylesheet" href="assets/css/cats.css">
   <link rel="stylesheet" href="assets/css/colors.css">
-  <link rel="stylesheet" href="assets/css/factory.css">
   <link rel="stylesheet" href="assets/css/frontend.css">
 </head>
   <body>
@@ -73,7 +72,7 @@
     </div>
 -->
         <br>
-    <footer class="fixed-bottom" align="left">
+    <footer class="fixed-bottom" align="rig">
         <p>© copyright <b>Sneicode 2020</b></p>
     </footer>
     
@@ -82,11 +81,10 @@
   <!--<script src="./index.js"></script>  -->
   <script src="./index.js"></script>
   <script src="assets/js/colors.js"></script>
-  <script src="assets/js/catSettings.js"></script>
-  <script src="assets/js/catFactory.js"></script>
   <script src="assets/js/navigation.js"></script>
-  <script src="assets/js/catalogue/buildCat.js"></script>
   <script src="assets/js/catalogue/showCats.js"></script>
+  <script src="assets/js/catalogue/buildCat.js"></script>
+  
   
 
 </html>
