--- a/client/factory.html
+++ b/client/factory.html
@@ -266,7 +266,7 @@
         </div>
         </div>
         <br>
-    <footer class="fixed-bottom" align="left">
+    <footer class="fixed-bottom" align="right">
         <p>©copyright Sneicode 2020</p>
     </footer>
 
