resolved various errors on catalogue page when rendering cats, clean up code

--- a/client/catalogue.html
+++ b/client/catalogue.html
@@ -57,7 +57,7 @@
         <p class="c-white">All your NeonCats in one place</p>
     </div>
 
-    <div class="container-fluid" id="catsDiv">
+    <div class="container-fluid row col-xl-12" id="catsDiv">
         
     </div>
         
@@ -84,7 +84,7 @@
   <script src="assets/js/navigation.js"></script>
   <script src="assets/js/catalogue/showCats.js"></script>
   <script src="assets/js/catalogue/buildCat.js"></script>
-  
+ 
   
 
 </html>
