--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,9 @@
                         <a class="nav-link" href="catalogue.html">Catalogue</a>
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" href="catalogue.html">Breeding</a>
+                  </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="info.html">Info</a>
                     </li>
                 </ul>
