--- a/client/info.html
+++ b/client/info.html
@@ -39,6 +39,9 @@
                         <a class="nav-link" href="catalogue.html">Catalogue</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="breeding.html">Breeding</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="info.html">Info</a>
                     </li>
                 </ul>
