finish breeding function, correct error in kidGeneration, assure cat renders correctyl

--- a/client/breeding.html
+++ b/client/breeding.html
@@ -77,8 +77,8 @@
         </button>
       </div>
       <div class="input-group p-3">
-        <input type="number" id="selectedMum" class="form-control d-none" disabled="true">     
-        <input type="number" id="selectedDad" class="form-control ml-2 d-none" disabled="true">      
+        <input type="number" id="selectedMum" class="form-control " disabled="true">     
+        <input type="number" id="selectedDad" class="form-control ml-2 " disabled="true">      
       </div>
     </div>
   
@@ -159,4 +159,3 @@
     <script src="assets/js/navigation.js"></script>
     <script src="assets/js/catalogue/showCats.js"></script>
     <script src="assets/js/catalogue/buildCat.js"></script>
-    <script src="assets/js/breeding/breeding.js"></script>
