continue improvement of breeding page, add marketplace functionality contract (backend)

--- a/client/index.html
+++ b/client/index.html
@@ -121,7 +121,7 @@
             <div class="col-md-3" align=center style="background-color: #dedef8; box-shadow: 
                 inset 1px -1px 1px #444, inset -1px 1px 1px #444; border-radius: 20px">
                 <p><h5>Assure your Gen-0 NeonCat today</h5>
-                    <br> First, or generation-0-NeonCats are extremely scarce. In total only 10 will ever exist. Assure you own one of these exclusive and unique cats.
+                    <br> First, or generation-0 NeonCats are extremely scarce. In total only 10 will ever exist. Assure you own one of these exclusive and unique cats.
                 </p>
             </div>
 
