--- a/client/factory.html
+++ b/client/factory.html
@@ -2,13 +2,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NeonCats Factory</title>
+  <title>Factory</title>
   <script type="text/javascript" src="assets/js/jquery-3.4.1.js"></script>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <script src="assets/bootstrap/js/popper.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/web3.min.js"></script>
-  <script src="./abi.js"></script>
+  <script src="assets/contractInteract/js/web3.min.js"></script>
+  <script src="assets/contractInteract/js/abi.js"></script>
   
 
   <link rel="stylesheet" href="assets/css/animations.css">
@@ -40,6 +40,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="breeding.html">Breeding</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="catDetails.html">CatDetails</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="marketplace.html">Buy&Sell Cats</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="info.html">Info</a>
@@ -274,10 +280,10 @@
     </footer>
 
   </body>
-  <script src="./index.js"></script>  
+  <script src="asset/contractInteract/index.js"></script>  
   <script src="assets/js/colors.js"></script>
-  <script src="assets/js/catSettings.js"></script>
-  <script src="assets/js/catFactory.js"></script>
+  <script src="assets/js/SingleCat/render.js"></script>
+  <script src="assets/js/SingleCat/config.js"></script>
   <script src="assets/js/navigation.js"></script>
   
 
