--- a/client/info.html
+++ b/client/info.html
@@ -74,7 +74,7 @@
             <br>
             <li>For funding your wallet, <a style="color:deepskyblue" href="#">go here</a> <span style="color:aqua; text-decoration: underline"> it's totally free of charge!!</span></li>
             <br>
-            <li>For help with the installation of the metamask plug in, follow <a style="color:deepskyblue" href="https://www.youtube.com/watch?v=Vj9ztSdKSPU" target="blank">this link</a></li>
+            <li>For help with the installation of the metamask plug in, follow <a style="color:deepskyblue" href="https://www.youtube.com/watch?v=Vj9ztSdKSPU" target="_blank">this link</a></li>
             <br>
             <li>Once you've successfully created and acquired your first NeonCat, navigate to the <a style="color:deepskyblue" href="catalogue.html" target="_blank">Catalogue</a> page to see all the NeonCats you own</li>
             
