--- a/client/catalogue.html
+++ b/client/catalogue.html
@@ -63,7 +63,10 @@
     <div class="container" style="margin-top: 2vh; margin-bottom: 10vh;">
         <div align="center">
         <h1 class="c-white">Catalogue</h1>
-        <p class="c-white">All your NeonCats in one place</p>
+        <p class="c-white">All your NeonCats in one place
+        </p>
+        <p class="c-white">If you want to sell one of your NeonCats simply click on it
+        </p>
     </div>
 
     <div class="row col-xl-12 justify-content-center ml-1" id="catsDiv">
@@ -74,20 +77,24 @@
 
 
 
-    <footer class="fixed-bottom" align="rig">
+    <footer class="fixed-bottom" align="right">
         <p>© copyright <b>Sneicode 2020</b></p>
     </footer>
     
 
   </body>
-  <!--<script src="./index.js"></script>  -->
 
   <script>
    $(document).ready(
     setTimeout(() => {
-        getCats()
+        var onclick = "gotoCatDetails(this.id)"
+        getCats(onclick)
     }, 1000)
     )
+    function gotoCatDetails(id){
+        window.location.href="/client/catDetails.html?catId="+ id
+    }
+
     </script>
 
   <script src="assets/contractInteract/index.js"></script>  
