--- a/client/catalogue.html
+++ b/client/catalogue.html
@@ -43,10 +43,7 @@
                         <a class="nav-link" href="breeding.html">Breeding</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="catDetails.html">CatDetails</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="marketplace.html">Buy&Sell Cats</a>
+                        <a class="nav-link" href="marketplace.html">Marketplace</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="info.html">Info</a>
@@ -91,9 +88,7 @@
         getCats(onclick)
     }, 1000)
     )
-    function gotoCatDetails(id){
-        window.location.href="/client/catDetails.html?catId="+ id
-    }
+    
 
     </script>
 
@@ -102,7 +97,9 @@
   <script src="assets/js/navigation.js"></script>
   <script src="assets/js/MultiCat/render.js"></script>
   <script src="assets/js/MultiCat/config.js"></script>
- 
+  <script src="assets/contractInteract/catGetters.js"></script>
+  <script src="assets/contractInteract/helpers.js"></script>
+  <script src="assets/contractInteract/marketplace.js"></script>
   
 
 </html>
