--- a/client/factory.html
+++ b/client/factory.html
@@ -42,10 +42,7 @@
                         <a class="nav-link" href="breeding.html">Breeding</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="catDetails.html">CatDetails</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="marketplace.html">Buy&Sell Cats</a>
+                        <a class="nav-link" href="marketplace.html">Marketplace</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="info.html">Info</a>
