--- a/client/breeding.html
+++ b/client/breeding.html
@@ -41,10 +41,7 @@
                       <a class="nav-link" href="breeding.html">Breeding</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="catDetails.html">CatDetails</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="marketplace.html">Buy&Sell Cats</a>
+                      <a class="nav-link" href="marketplace.html">Marketplace</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="info.html">Info</a>
@@ -137,7 +134,7 @@
     <div class="row col-xl-12 justify-content-center ml-1" id="catsBreedDiv">
     </div>
 <br>
-    <footer align="right">
+    <footer  align="right">
         <p>©copyright Sneicode 2020</p>
     </footer>
     
@@ -146,7 +143,7 @@
       setTimeout(() => {
         var onclick = "selectCat(this.id)"
           getCats(onclick)
-      }, 1000)
+      }, 5000)
       )
       </script>  
 
@@ -158,3 +155,5 @@
     <script src="assets/js/MultiCat/render.js"></script>
     <script src="assets/js/MultiCat/config.js"></script>
     <script src="assets/js/breeding/breeding.js"></script>
+    <script src="assets/contractInteract/catGetters.js"></script>
+    <script src="assets/contractInteract/helpers.js"></script>
